Fix for image overflow and re-structuring css files.

--- a/style.css
+++ b/style.css
@@ -11,3 +11,135 @@ License: MIT
 License URI: http://www.opensource.org/licenses/mit-license.php
 
 */
+
+
+/* Fix for image overflow out of wp-caption div */
+
+.wp-caption  {
+  max-width: 100%;
+}
+
+
+/* DropDown Menu */
+.dropdown-submenu {
+position:relative;
+}
+
+.dropdown-submenu>.dropdown-menu {
+top:0;
+left:100%;
+}
+
+.dropdown-submenu:active>.dropdown-menu,.dropdown-submenu:hover>.dropdown-menu {
+display:block;
+}
+
+.dropdown-submenu>a:after {
+display:block;
+content:" ";
+float:right;
+width:0;
+height:0;
+border-color:transparent;
+border-style:solid;
+border-width:5px 0 5px 5px;
+border-left-color:#ccc;
+margin-top:5px;
+margin-right:-10px;
+}
+
+.dropdown-submenu:active>a:after {
+border-left-color:#fff;
+}
+
+.dropdown-submenu.pull-left {
+float:none;
+}
+
+.dropdown-submenu.pull-left>.dropdown-menu {
+left:-100%;
+margin-left:10px;
+}
+
+@media (min-width:767px) {
+ul.nav li.dropdown:hover > ul.dropdown-menu {display:block; 
+}
+
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+position:relative;
+min-height:100%;
+}
+
+body {
+/* Margin bottom by footer height */
+margin-bottom:60px;
+}
+
+
+
+.align-left {
+  text-align: left !important;
+}
+.align-right {
+  text-align: right !important;
+}
+.align-center {
+  text-align: center !important;
+}
+.align-justify {
+  text-align: justify !important;
+}
+.footer {
+position:absolute;
+bottom:0;
+width:100%;
+/* Set the fixed height of the footer here */
+height:60px;
+background-color:#f5f5f5;
+}
+
+.navbar-bg {
+opacity: 0.6;
+}
+
+/* Date Style */
+
+.date {
+	width: 130px; height: 120px; 
+	background: #fcfcfc; 
+	background: linear-gradient(top, #fcfcfc 0%,#dad8d8 100%); 
+	background: -moz-linear-gradient(top, #fcfcfc 0%, #dad8d8 100%); 
+	background: -webkit-linear-gradient(top, #fcfcfc 0%,#dad8d8 100%); 
+	border: 1px solid #d2d2d2;
+	border-radius: 10px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+	-moz-box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+	-webkit-box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+}
+.date p {
+	font-family: Helvetica, sans-serif; 
+	font-size: 40px; text-align: center; color: #9e9e9e; 
+}
+.date p span {
+	background: #d10000; 
+	background: linear-gradient(top, #d10000 0%, #7a0909 100%);
+	background: -moz-linear-gradient(top, #d10000 0%, #7a0909 100%);
+	background: -webkit-linear-gradient(top, #d10000 0%, #7a0909 100%);
+}
+.date p span {
+	background: #d10000; 
+	background: linear-gradient(top, #d10000 0%, #7a0909 100%);
+	background: -moz-linear-gradient(top, #d10000 0%, #7a0909 100%);
+	background: -webkit-linear-gradient(top, #d10000 0%, #7a0909 100%);
+	font-size: 20px; color: #fff; text-transform: uppercase; 	
+	display: block;
+}
+
+/* Fix for div, Left box where date is displayed */  
+.height-fix {
+height: 180px;
+}
